Fixed button spacing/text, factored frontend, added support for NFID

--- a/frontend/assets/index.css
+++ b/frontend/assets/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 html {
     background-color: #303030;
 }
@@ -8,7 +10,7 @@ html {
     justify-content: center;
     align-items: center;
 }
-  
+
 .header {
     position: absolute;
     top: 0;
@@ -23,35 +25,69 @@ html {
     color: #ffcf40;
     font-size: 18px;
 }
-  
+
 .content {
-    margin-top: 100px;
+    margin-top: 150px;
     height: auto;
-    width: 90%;
+    width: 220px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    font-size: 20px;
-    color: #e7e7e7;
+    font-size: 18px;
+    color: #f5f5f7;
+    background-color: #161616;
+    border: 2px solid #4a453f;
+    border-radius: 14px;
+    font-family: 'Montserrat';
 }
-  
+
 button {
     background: none;
-    border: 1px solid #e7e7e7;
-    width: auto;
+    border: 1px solid #12fff9;
     border-radius: 10px;
-    width: 140px;
+    width: 180px;
+    height: 45px;
     font-size: 14px;
-    padding: 8px 10px;
+    text-align: center;
+    padding: 8px 12px;
     color: lightgoldenrodyellow;
     cursor: pointer;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    font-family: 'Montserrat';
 }
-  
+
+button p {
+    float: left;
+    width: 80%;
+}
+
 button:hover {
     background-color: rgba(255,255,255,0.1);
+}
+
+.statusBubble {
+    height: 10px;
+    width: 10px;
+    background-color: #fc609d;
+    border: 1px solid black;
+    border-radius: 360px;
+    margin-left: 6px;
+}
+
+.content h5 {
+    margin-bottom: 10px;
+}
+
+.data {
+    text-align: center;
+    color: lime;
+    font-size: 12px;
+    margin-top: 0;
+}
+
+.walletContainer {
+    margin: 10px;
 }
